let's just say I really don't like javascript. added DataTables files and added a ready jQuery method on staff.js to initialise data tables on staff.html

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -16,6 +16,17 @@
 		<link href="/css/plugins/toastr/toastr.min.css" rel="stylesheet" type="text/css"/>
 		#[/if]
 
+        <!-- dataTables CSS -->
+        <link href="/css/plugins/dataTables/media/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/>
+        <link href="/css/plugins/dataTables/media/jquery.dataTables_themeroller.min.css" rel="stylesheet" type="text/css"/>
+        <link href="/css/plugins/dataTables/plugins/dataTables.bootstrap.css" rel="stylesheet" type="text/css"/>
+
+        <!-- dataTables JS -->
+        <script src="/js/plugins/dataTables/media/jquery.js"></script>
+        <script src="/js/plugins/dataTables/media/jquery.dataTables.min.js"></script>
+        <script src="/js/plugins/dataTables/media/dataTables.bootstrap.js"></script>
+        <script src="/js/plugins/dataTables/plugins/dataTables.bootstrap.js"></script>
+
 		<!-- keep in header! -->
 		<script src="/js/core/jquery.min.js"></script>
 
