--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Permissions</label>
-                        <div class="col-sm-9 container multi-select-box">
+                        <div class="col-sm-9 container">
                             #[collection: permissions]
 
                             #[pre]#[/pre]
