--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -19,12 +19,13 @@
 		<link href="/css/plugins/toastr/toastr.min.css" rel="stylesheet" type="text/css"/>
 		#[/if]
 
-		<!-- dataTables CSS -->
-        <link href="/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet" type="text/css"/>
+		<!-- data-tables CSS -->
+        <link href="/css/plugins/data-tables/data-tables.bootstrap.css" rel="stylesheet" type="text/css"/>
 
-        <!-- dataTables JS -->
-        <script src="/js/plugins/dataTables/jquery.dataTables.min.js"></script>
-        <script src="/js/plugins/dataTables/dataTables.bootstrap.js"></script>
+        <!-- data-tables JS -->
+        <script src="/js/plugins/data-tables/jquery.data-tables.min.js"></script>
+        <script src="/js/plugins/data-tables/data-tables.bootstrap.js"></script>
+        <script src="/js/plugins/data-tables/wrapper.js"></script>
 
 		<!--[if lt IE 9]>
 		<script src="/js/core/html5shiv.js"></script>
