DataTables for staff roles

--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -10,7 +10,7 @@
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Member
 			</button>
 		</div>
-		<table class="table table-bordered table-hover" id="staff-management-table">
+		<table class="table table-bordered table-hover" id="staff-table">
 			<thead>
 				<tr>
 					<th class="text-center">Username</th>
