--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -6,12 +6,11 @@
 
 <div class="row">
 	<div class="col lg-12 col md-12">
-        <div class="text-right">
-            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Role</button>
-        </div>
-		<table class="table table-bordered table-hover">
+		<div class="text-right">
+			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Role</button>
+		</div>
+		<table class="table table-bordered table-hover" id="staff-roles-table">
 			<thead>
-
 				<tr>
 					<th class="text-center">Role Title</th>
 					<th class="text-center">Permissions</th>
@@ -24,7 +23,6 @@
 				#[pre]#[/pre]
 
 				#[each]
-
 				<tr>
 					<td>#label</td>
 					<td>#HTMLOKAY:permission-summary</td>
@@ -33,8 +31,6 @@
 						<button class="btn delete-button" data-id="#id">Delete</button>
 					</td>
 				</tr>
-
-
 				#[/each]
 
 				#[post]#[/post]
@@ -60,37 +56,37 @@
 				<h3 class="create-mode">Create Staff Role</h3>
 			</div>
 			<div class="modal-body">
-                <form class="form-horizontal edit-form">
-                    <input type="hidden" name="entity-type" value="staff-role"/>
-                    <input type="hidden" name="entity-id" value="0"/>
-                    <div class="form-group">
-                        <!-- TODO: Shouldn't the id of this bit be 'role-title' instead of 'label'? -->
-                        <label for="label" class="col-sm-3 control-label">Role Title</label>
-                        <div class="col-sm-9">
-                            <input class="form-control" type="text" name="label" id="label"/>
-                            <p class="help-block">Example block-level help text here.</p>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label">Permissions</label>
-                        <div class="col-sm-9 container">
-                            #[collection: permissions]
+				<form class="form-horizontal edit-form">
+					<input type="hidden" name="entity-type" value="staff-role"/>
+					<input type="hidden" name="entity-id" value="0"/>
+					<div class="form-group">
+						<!-- TODO: Shouldn't the id of this bit be 'role-title' instead of 'label'? -->
+						<label for="label" class="col-sm-3 control-label">Role Title</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="text" name="label" id="label"/>
+							<p class="help-block">Example block-level help text here.</p>
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-sm-3 control-label">Permissions</label>
+						<div class="col-sm-9 container">
+							#[collection: permissions]
 
-                            #[pre]#[/pre]
+							#[pre]#[/pre]
 
-                            #[each]
-                            <input type="checkbox" class="crud-list-prefill-permission-ids" name="permission-#id" id="permission-#id" value="#id"/>
-                            <label for="permission-#id">#description</label><br />
-                            #[/each]
+							#[each]
+							<input type="checkbox" class="crud-list-prefill-permission-ids" name="permission-#id" id="permission-#id" value="#id"/>
+							<label for="permission-#id">#description</label><br/>
+							#[/each]
 
-                            #[post]#[/post]
+							#[post]#[/post]
 
-                            #[empty]#[/empty]
+							#[empty]#[/empty]
 
-                            #[/collection]
-                        </div>
-                    </div>
-                </form>
+							#[/collection]
+						</div>
+					</div>
+				</form>
 
 			</div>
 			<div class="modal-footer">
