--- a/src/main/resources/static/medicines.html
+++ b/src/main/resources/static/medicines.html
@@ -9,10 +9,9 @@
         <div class="text-right">
             <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i> &nbsp;Add Medicine</button>
         </div>
-		<table class="table table-bordered table-hover">
+		<table class="table table-bordered table-hover" id="medicines-table">
 			<thead>
 				<tr>
-					<th class="text-center">ID</th>
 					<th class="text-center">Name</th>
 					<th class="text-center">Order Time</th>
 					<th class="text-center">Actions</th>
@@ -26,7 +25,6 @@
 
 				#[each]
 				<tr>
-					<td>#id</td>
 					<td>#name</td>
 					<td>#order-time day(s)</td>
 					<td>
@@ -40,7 +38,7 @@
 
 				#[empty]
 				<tr>
-					<td class="text-center" colspan="4"><b><u>No medicines.</u></b></td>
+					<td class="text-center" colspan="3">No medicines.</td>
 				</tr>
 				#[/empty]
 				#[/collection]
