DataTables for camera types

--- a/src/main/resources/static/camera-types.html
+++ b/src/main/resources/static/camera-types.html
@@ -9,11 +9,11 @@
         <div class="text-right">
             <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Camera Type</button>
         </div>
-        <table class="table table-bordered table-hover">
+        <table class="table table-bordered table-hover" id="camera-types-table">
             <thead>
             <tr>
                 <th class="text-center">Label</th>
-                <th class="text-center">Actions</th>
+                <th class="text-center col-md-3">Actions</th>
             </tr>
             </thead>
 
