DataTables for therapies

--- a/src/main/resources/static/therapies.html
+++ b/src/main/resources/static/therapies.html
@@ -8,7 +8,7 @@
         <div class="text-right">
             <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Therapy</button>
         </div>
-		<table class="table table-bordered table-hover">
+		<table class="table table-bordered table-hover" id="therapies-table">
 			<thead>
 				<tr>
 					<th class="text-center">Name</th>
