--- a/src/main/resources/static/staff-availabilities.html
+++ b/src/main/resources/static/staff-availabilities.html
@@ -5,93 +5,77 @@
 ##_header.html
 
 <div class="row">
-	<div class="col-lg-12 col-md-12">
-		<p><em>Editing default availabilities for <strong>#staff-name</strong>.</em></p>
-	</div>
+    <div class="col-lg-12 col-md-12">
+        <p><em>Editing default availabilities for <strong>#staff-name</strong>.</em></p>
+    </div>
 </div>
 
 <div class="row">
-	<div class="col-lg-12 col-md-12">
-		<div class="text-right">
-			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Availability</button>
-		</div>
-		<table class=" table table-bordered table-hover">
-			<thead>
-				<tr>
-					<th class="text-center">Start time</th>
-					<th class="text-center">End time</th>
-					<th class="text-center">Day of week</th>
-                    <th class="text-center">Action</th>
-				</tr>
-			</thead>
-			<tbody>
-				#[collection: staff-availabilities]
+    <div class="col-lg-12 col-md-12">
+        <div class="text-right">
+            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Availability
+            </button>
+        </div>
+        <table class=" table table-bordered table-hover">
+            <thead>
+            <tr>
+                <th class="text-center">Day of week</th>
+                <th class="text-center">Start time</th>
+                <th class="text-center">End time</th>
+                <th class="text-center">Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            #[collection: staff-availabilities]
 
-				#[pre]#[/pre]
+            #[pre]#[/pre]
 
-				#[each]
-				<tr>
-					<td>#from</td>
-					<td>#to</td>
-                    <td>
-                        <select>
-                            <option value="1" selected="#[if: day=1]selected#[/if]">Monday</option>
-                            <option value="2" selected="#[if: day=2]selected#[/if]">Tuesday</option>
-                            <option value="3" selected="#[if: day=3]selected#[/if]">Wednesday</option>
-                            <option value="4" selected="#[if: day=4]selected#[/if]">Thursday</option>
-                            <option value="5" selected="#[if: day=5]selected#[/if]">Friday</option>
-                            <option value="6" selected="#[if: day=6]selected#[/if]">Saturday</option>
-                            <option value="7" selected="#[if: day=7]selected#[/if]">Sunday</option>
-                        </select>
-                    </td>
-					<td>
-						<button class="btn edit-button" data-id="#id">Edit</button>
-						<button class="btn delete-button" data-id="#id">Delete</button>
-					</td>
-				</tr>
+            #[each]
+            <tr>
+                <td>#day-of-week-label</td>
+                <td>#start-time</td>
+                <td>#end-time</td>
+                <td>
+                    <button class="btn edit-button" data-id="#id">Edit</button>
+                    <button class="btn delete-button" data-id="#id">Delete</button>
+                </td>
+            </tr>
 
-				#[/each]
+            #[/each]
 
-				#[post]#[/post]
+            #[post]#[/post]
 
-				#[empty]
-				<tr>
-					<td colspan="5">No Availability set for #staff-name</td>
-				</tr>
-				#[/empty]
+            #[empty]
+            <tr>
+                <td colspan="5">No Availability set for #staff-name</td>
+            </tr>
+            #[/empty]
 
-				#[/collection]
-			</tbody>
-		</table>
+            #[/collection]
+            </tbody>
+        </table>
 
-	</div>
+    </div>
 </div>
 
 <div class="modal hide fade edit-modal">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h3 class="edit-mode">Edit Availabilities</h3>
-				<h3 class="create-mode">Set Availabilities</h3>
-			</div>
-			<div class="modal-body">
-				<form class="edit-form form-inline text-center">
-					<input type="hidden" name="entity-type" value="staff-availabilities"/>
-					<input type="hidden" name="entity-id" value="0"/>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="edit-mode">Edit Availabilities</h3>
 
-					<input type="hidden" name="staff-id" value="#staff-id"/>
-i
-					<div class="form-group">
-						<label for="startTime">Start time:</label>
-						<input type="text" name="startTime" id="startTime"/>
-					</div>
-					<div class="form-group">
-						<label for="endTime">End time:</label>
-						<input type="text" name="endTime" id="endTime"/>
-					</div>
+                <h3 class="create-mode">Set Availabilities</h3>
+            </div>
+            <div class="modal-body">
+                <form class="edit-form form-inline text-center">
+                    <input type="hidden" name="entity-type" value="staff-availability"/>
+                    <input type="hidden" name="entity-id" value="0"/>
+
+                    <input type="hidden" name="staff-id" value="#staff-id"/>
+
                     <div class="form-group">
-                        <label for="dayOfWeek">Day of week:</label>
-                        <select name="dayOfWeek" id="dayOfWeek">
+                        <label for="day-of-week">Day of week:</label>
+                        <select name="day-of-week" id="day-of-week">
                             <option value="1">Monday</option>
                             <option value="2">Tuesday</option>
                             <option value="3">Wednesday</option>
@@ -101,14 +85,22 @@ i
                             <option value="7">Sunday</option>
                         </select>
                     </div>
-				</form>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-cancel">Cancel</button>
-				<button type="button" class="btn btn-primary btn-save">Ok</button>
-			</div>
-		</div>
-	</div>
+                    <div class="form-group">
+                        <label for="start-time">Start time:</label>
+                        <input type="text" name="start-time" id="start-time"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="end-time">End time:</label>
+                        <input type="text" name="end-time" id="end-time"/>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-cancel">Cancel</button>
+                <button type="button" class="btn btn-primary btn-save">Ok</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="/js/staff-availabilities.js"></script>
