DataTables for action log

--- a/src/main/resources/static/appointments.html
+++ b/src/main/resources/static/appointments.html
@@ -153,7 +153,7 @@
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-cog"></i> Users <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
                             <li>
-                                <a href="activity.html"><i class="fa fa-fw fa-list"></i> Activity Log</a>
+                                <a href="action-log.html"><i class="fa fa-fw fa-list"></i> Activity Log</a>
                             </li>
                             <li>
                                 <a href="settings.html"><i class="fa fa-fw fa-database"></i> Admin Settings</a>
