--- a/src/main/resources/static/staff-availabilities.html
+++ b/src/main/resources/static/staff-availabilities.html
@@ -45,11 +45,7 @@
 
             #[post]#[/post]
 
-            #[empty]
-            <tr>
-                <td colspan="5">No Availability set for #staff-name</td>
-            </tr>
-            #[/empty]
+            #[empty]#[/empty]
 
             #[/collection]
             </tbody>
