--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -38,11 +38,7 @@
 
 				#[post]#[/post]
 
-				#[empty]
-				<tr>
-					<td colspan="4">No patients</td>
-				</tr>
-				#[/empty]
+				#[empty]#[/empty]
 
 				#[/collection]
 			</tbody>
