--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -39,11 +39,8 @@
 
 				#[post]#[/post]
 
-				#[empty]
-				<tr>
-					<td colspan="4">No staff.</td>
-				</tr>
-				#[/empty]
+				#[empty]#[/empty]
+
 				#[/collection]
 			</tbody>
 		</table>
