--- a/src/main/resources/static/camera-types.html
+++ b/src/main/resources/static/camera-types.html
@@ -5,73 +5,70 @@
 ##_header.html
 
 <div class="row">
-    <div class="col-lg-12 col-md-12">
-        <div class="text-right">
-            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Camera Type</button>
-        </div>
-        <table class="table table-bordered table-hover" id="camera-types-table">
-            <thead>
-            <tr>
-                <th class="text-center">Label</th>
-                <th class="text-center col-md-3">Actions</th>
-            </tr>
-            </thead>
+	<div class="col-lg-12 col-md-12">
+		<div class="text-right">
+			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Camera Type
+			</button>
+		</div>
+		<table class="table table-bordered table-hover" id="camera-types-table">
+			<thead>
+				<tr>
+					<th class="text-center">Label</th>
+					<th class="text-center col-md-3">Actions</th>
+				</tr>
+			</thead>
 
-            <tbody>
-            #[collection: camera-types]
+			<tbody>
+				#[collection: camera-types]
 
-            #[pre]#[/pre]
+				#[pre]#[/pre]
 
-            #[each]
-            <tr>
-                <td>#label</td>
-                <td>
-                    <button class="btn edit-button" data-id="#id">Edit</button>
-                    <button class="btn delete-button" data-id="#id">Delete</button>
-                </td>
-            </tr>
-            #[/each]
+				#[each]
+				<tr>
+					<td>#label</td>
+					<td>
+						<button class="btn edit-button" data-id="#id">Edit</button>
+						<button class="btn delete-button" data-id="#id">Delete</button>
+					</td>
+				</tr>
+				#[/each]
 
-            #[post]#[/post]
+				#[post]#[/post]
 
-            #[empty]
-            <tr>
-                <td class="text-center" colspan="2"><strong>No camera types.</strong></td>
-            </tr>
-            #[/empty]
+				#[empty]#[/empty]
 
-            #[/collection]
-            </tbody>
-        </table>
-    </div>
+				#[/collection]
+			</tbody>
+		</table>
+	</div>
 </div>
 
 <div class="modal hide fade edit-modal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3 class="edit-mode">Edit Camera Type</h3>
-                <h3 class="create-mode">Create Camera Type</h3>
-            </div>
-            <div class="modal-body">
-                <form class="form-horizontal edit-form">
-                    <input type="hidden" name="entity-type" value="camera-type"/>
-                    <input type="hidden" name="entity-id" value="0"/>
-                    <div class="form-group">
-                        <label for="label" class="col-sm-3 control-label">Label</label>
-                        <div class="col-sm-9">
-                            <input class="form-control" type="text" name="label" id="label"/>
-                            <p class="help-block">Example block-level help text here.</p>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-cancel">Cancel</button>
-                <button type="button" class="btn btn-primary btn-save">Ok</button>
-            </div>
-        </div>
-    </div>
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h3 class="edit-mode">Edit Camera Type</h3>
+				<h3 class="create-mode">Create Camera Type</h3>
+			</div>
+			<div class="modal-body">
+				<form class="form-horizontal edit-form">
+					<input type="hidden" name="entity-type" value="camera-type"/>
+					<input type="hidden" name="entity-id" value="0"/>
+					<div class="form-group">
+						<label for="label" class="col-sm-3 control-label">Label</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="text" name="label" id="label"/>
+							<p class="help-block">Example block-level help text here.</p>
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-cancel">Cancel</button>
+				<button type="button" class="btn btn-primary btn-save">Ok</button>
+			</div>
+		</div>
+	</div>
 </div>
 
 <script src="/js/camera-types.js"></script>
