--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -6,9 +6,10 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
-        <div class="text-right">
-            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Camera</button>
-        </div>
+		<div class="text-right">
+			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Camera
+			</button>
+		</div>
 		<table class="table table-bordered table-hover" id="cameras-table">
 			<thead>
 				<tr>
@@ -36,11 +37,7 @@
 
 				#[post]#[/post]
 
-				#[empty]
-				<tr>
-					<td class="text-center" colspan="3">No cameras.</td>
-				</tr>
-				#[/empty]
+				#[empty]#[/empty]
 
 				#[/collection]
 			</tbody>
@@ -57,38 +54,38 @@
 				<h3 class="create-mode">Add Camera</h3>
 			</div>
 			<div class="modal-body">
-                <form class="form-horizontal edit-form">
-                    <input type="hidden" name="entity-type" value="camera"/>
-                    <input type="hidden" name="entity-id" value="0"/>
-                    <div class="form-group">
-                        <label for="camera-type-id" class="col-sm-3 control-label">Camera Type</label>
-                        <div class="col-sm-9">
-                            <select class="form-control" name="camera-type-id" id="camera-type-id">
-                                #[collection: camera-types]
+				<form class="form-horizontal edit-form">
+					<input type="hidden" name="entity-type" value="camera"/>
+					<input type="hidden" name="entity-id" value="0"/>
+					<div class="form-group">
+						<label for="camera-type-id" class="col-sm-3 control-label">Camera Type</label>
+						<div class="col-sm-9">
+							<select class="form-control" name="camera-type-id" id="camera-type-id">
+								#[collection: camera-types]
 
-                                #[pre]#[/pre]
+								#[pre]#[/pre]
 
-                                #[each]
-                                <option value="#id">#label</option>
-                                #[/each]
+								#[each]
+								<option value="#id">#label</option>
+								#[/each]
 
-                                #[post]#[/post]
+								#[post]#[/post]
 
-                                #[empty]#[/empty]
+								#[empty]#[/empty]
 
-                                #[/collection]
-                            </select>
-                            <p class="help-block">Example block-level help text here.</p>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="room-number" class="col-sm-3 control-label">Room Number</label>
-                        <div class="col-sm-9">
-                            <input class="form-control" type="text" name="room-number" id="room-number"/>
-                            <p class="help-block">Example block-level help text here.</p>
-                        </div>
-                    </div>
-                </form>
+								#[/collection]
+							</select>
+							<p class="help-block">Example block-level help text here.</p>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="room-number" class="col-sm-3 control-label">Room Number</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="text" name="room-number" id="room-number"/>
+							<p class="help-block">Example block-level help text here.</p>
+						</div>
+					</div>
+				</form>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-cancel">Cancel</button>
