--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -7,7 +7,8 @@
 <div class="row">
 	<div class="col lg-12 col md-12">
 		<div class="text-right">
-			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Role</button>
+			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Role
+			</button>
 		</div>
 		<table class="table table-bordered table-hover" id="staff-roles-table">
 			<thead>
@@ -35,11 +36,8 @@
 
 				#[post]#[/post]
 
-				#[empty]
-				<tr>
-					<td colspan="3">No staff roles.</td>
-				</tr>
-				#[/empty]
+				#[empty]#[/empty]
+
 				#[/collection]
 			</tbody>
 		</table>
@@ -60,7 +58,6 @@
 					<input type="hidden" name="entity-type" value="staff-role"/>
 					<input type="hidden" name="entity-id" value="0"/>
 					<div class="form-group">
-						<!-- TODO: Shouldn't the id of this bit be 'role-title' instead of 'label'? -->
 						<label for="label" class="col-sm-3 control-label">Role Title</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="label" id="label"/>
