--- a/src/main/resources/static/therapies.html
+++ b/src/main/resources/static/therapies.html
@@ -5,9 +5,10 @@
 ##_header.html
 <div class="row">
 	<div class="col-lg-12 col-md-12">
-        <div class="text-right">
-            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Therapy</button>
-        </div>
+		<div class="text-right">
+			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Therapy
+			</button>
+		</div>
 		<table class="table table-bordered table-hover" id="therapies-table">
 			<thead>
 				<tr>
@@ -41,11 +42,7 @@
 
 				#[post]#[/post]
 
-				#[empty]
-				<tr>
-					<td class="text-center" colspan="6"><strong>No therapies.</strong></td>
-				</tr>
-				#[/empty]
+				#[empty]#[/empty]
 
 				#[/collection]
 			</tbody>
@@ -63,74 +60,74 @@
 				<h3 class="create-mode text-center">Create Therapy</h3>
 			</div>
 			<div class="modal-body">
-                <form class="form-horizontal edit-form">
-                    <input type="hidden" name="entity-type" value="therapy"/>
-                    <input type="hidden" name="entity-id" value="0"/>
-                    <div class="form-group">
-                        <label for="name" class="col-sm-3 control-label">Name</label>
-                        <div class="col-sm-9">
-                            <input class="form-control" type="text" name="name" id="name"/>
-                            <p class="help-block">Example block-level help text here.</p>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="default-duration" class="col-sm-3 control-label">Default Duration</label>
-                        <div class="col-sm-9">
-                            <input class="form-control" type="text" name="default-duration" id="default-duration"/>
-                            <p class="help-block">This will be measured in minutes.</p>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="medicine-required-id" class="col-sm-3 control-label">Medicine Required</label>
-                        <div class="col-sm-9">
-                            <select class="form-control" name="medicine-required-id" id="medicine-required-id">
-                                #[collection: medicines]
+				<form class="form-horizontal edit-form">
+					<input type="hidden" name="entity-type" value="therapy"/>
+					<input type="hidden" name="entity-id" value="0"/>
+					<div class="form-group">
+						<label for="name" class="col-sm-3 control-label">Name</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="text" name="name" id="name"/>
+							<p class="help-block">Example block-level help text here.</p>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="default-duration" class="col-sm-3 control-label">Default Duration</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="text" name="default-duration" id="default-duration"/>
+							<p class="help-block">This will be measured in minutes.</p>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="medicine-required-id" class="col-sm-3 control-label">Medicine Required</label>
+						<div class="col-sm-9">
+							<select class="form-control" name="medicine-required-id" id="medicine-required-id">
+								#[collection: medicines]
 
-                                #[pre]#[/pre]
+								#[pre]#[/pre]
 
-                                #[each]
-                                <option value="#id">#name</option>
-                                #[/each]
+								#[each]
+								<option value="#id">#name</option>
+								#[/each]
 
-                                #[post]#[/post]
+								#[post]#[/post]
 
-                                #[empty]#[/empty]
+								#[empty]#[/empty]
 
-                                #[/collection]
-                            </select>
-                            <p class="help-block">Example block-level help text here.</p>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="medicine-dose" class="col-sm-3 control-label">Medicine Dose</label>
-                        <div class="col-sm-9">
-                            <input class="form-control" type="text" name="medicine-dose" id="medicine-dose"/>
-                            <p class="help-block">Example block-level help text here.</p>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="camera-type-id" class="col-sm-3 control-label">Camera Type Used</label>
-                        <div class="col-sm-9">
-                            <select class="form-control" name="camera-type-id" id="camera-type-id">
-                                #[collection: camera-types]
+								#[/collection]
+							</select>
+							<p class="help-block">Example block-level help text here.</p>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="medicine-dose" class="col-sm-3 control-label">Medicine Dose</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="text" name="medicine-dose" id="medicine-dose"/>
+							<p class="help-block">Example block-level help text here.</p>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="camera-type-id" class="col-sm-3 control-label">Camera Type Used</label>
+						<div class="col-sm-9">
+							<select class="form-control" name="camera-type-id" id="camera-type-id">
+								#[collection: camera-types]
 
-                                #[pre]#[/pre]
+								#[pre]#[/pre]
 
-                                #[each]
-                                <option value="#id">#label</option>
-                                #[/each]
+								#[each]
+								<option value="#id">#label</option>
+								#[/each]
 
-                                #[post]#[/post]
+								#[post]#[/post]
 
-                                #[empty]#[/empty]
+								#[empty]#[/empty]
 
-                                #[/collection]
-                            </select>
-                            <p class="help-block">Example block-level help text here.</p>
-                        </div>
-                    </div>
+								#[/collection]
+							</select>
+							<p class="help-block">Example block-level help text here.</p>
+						</div>
+					</div>
 
-                </form>
+				</form>
 
 			</div>
 			<div class="modal-footer">
