DataTables for select staff

--- a/src/main/resources/static/select-staff.html
+++ b/src/main/resources/static/select-staff.html
@@ -11,7 +11,7 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
-		<table class="table table-bordered table-hover">
+		<table class="table table-bordered table-hover" id="staff-table">
 			<thead>
 				<tr>
 					<th class="text-center">Username</th>
@@ -46,5 +46,7 @@
 		</table>
 	</div>
 </div>
+
+<script src="/js/select-staff.js"></script>
 
 ##_footer.html
