"medicine" -> "tracer"... everywhere

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -105,8 +105,8 @@
 							<a href="javascript:;"><i class="fa fa-fw fa-arrows-v"></i> Manage Resources</a>
 							<!-- TODO: implement collapse action -->
 							<ul class="nav navbar-nav">
-								<li#[if: current-page = medicines] class="active"#[/if]>
-									<a href="/medicines"><i class="fa fa-fw fa-flask"></i> Medicines</a>
+								<li#[if: current-page = tracers] class="active"#[/if]>
+									<a href="/tracers"><i class="fa fa-fw fa-flask"></i> Tracers</a>
 								</li>
 								<li#[if: current-page = cameras] class="active"#[/if]>
 									<a href="/cameras"><i class="fa fa-fw fa-camera"></i> Cameras</a>
