Consistent crud page titles

--- a/src/main/resources/static/camera-types.html
+++ b/src/main/resources/static/camera-types.html
@@ -1,4 +1,4 @@
-#[def: title = Camera Types Management]
+#[def: title = Manage Camera Types]
 #[def: current-page = camera-types]
 #[def: crud = yes]
 
