--- a/src/main/resources/static/staff-availabilities.html
+++ b/src/main/resources/static/staff-availabilities.html
@@ -1,4 +1,4 @@
-#[def: title = Manage Staff Availability]
+#[def: title = Manage Staff Availabilities]
 #[def: current-page = staff-availabilities]
 #[def: crud = yes]
 
@@ -6,6 +6,7 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
+		<!-- TODO: Put me in a nice information call out box -->
 		<p><em>Editing default availabilities for <strong>#staff-name</strong>.</em></p>
 	</div>
 </div>
