--- a/src/main/resources/static/select-staff.html
+++ b/src/main/resources/static/select-staff.html
@@ -1,10 +1,10 @@
-#[def: title = Select Staff Member]
-#[def: crud = yes]
+#[def: title = Select Staff Member to Edit]
 
 ##_header.html
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
+		<!-- TODO: Put me in a nice information call out box -->
 		<p>Select a staff member below to edit <strong>#subject</strong>.</p>
 	</div>
 </div>
