--- a/src/main/resources/static/staff-absences.html
+++ b/src/main/resources/static/staff-absences.html
@@ -6,6 +6,7 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
+		<!-- TODO: Put me in a nice information call out box -->
 		<p><em>Editing staff absences for <strong>#staff-name</strong>.</em></p>
 	</div>
 </div>
