A few CSS fixes

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -20,7 +20,7 @@
 		<link href="/css/plugins/toastr/toastr.min.css" rel="stylesheet" type="text/css"/>
 		#[/if]
         #[if: calendar]
-        <link href="/css/plugins/fullcalendar/fullcalendar.min.css" rel="stylesheet" type="text/css"/>
+        <link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
         #[/if]
 
 		<!-- data-tables CSS -->
