--- a/src/main/resources/static/appointments.html
+++ b/src/main/resources/static/appointments.html
@@ -41,7 +41,7 @@
     </div>
 
     <div hidden class="col-md-12 col-lg-12" id="page-two">
-        <p>Patient Selected: <span class="patient-selected"></span> <a class="small" id="go-back-to-select-patient">[Change]</a></p>
+        <p><strong>Patient Selected:</strong> <span class="patient-selected"></span> <a class="small" id="go-back-to-select-patient">[Change]</a></p>
 
         <table class="table table-bordered table-hover" id="therapies-table">
             <thead>
@@ -83,13 +83,13 @@
     </div>
 
     <div hidden class="col-md-12 col-lg-12" id="page-three">
-        <p>Patient Selected: <span class="patient-selected"></span></p>
-        <p>Therapy Selected: <span class="therapy-selected"></span> <a class="small" id="go-back-to-select-therapy">[Change]</a></p>
+        <p><strong>Patient Selected:</strong> <span class="patient-selected"></span></p>
+        <p><strong>Therapy Selected:</strong> <span class="therapy-selected"></span> <a class="small" id="go-back-to-select-therapy">[Change]</a></p>
 
         <button class="btn btn-primary" id="view-available-appointments">View Available Appointments</button>
     </div>
 
-    <div hidden class="calendar"></div>
+    <div hidden class="col-md-12 col-lg-12 calendar"></div>
 </div>
 
 <script src="/js/core/jquery-ui.min.js"></script>
