--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -5,10 +5,9 @@
 ##_header.html
 
 <div class="row">
-	<div class="col lg-12 col md-12">
+	<div class="col-lg-12 col-md-12">
 		<div class="text-right">
-			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Role
-			</button>
+			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Role</button>
 		</div>
 		<table class="table table-bordered table-hover" id="staff-roles-table">
 			<thead>
